--- a/Example/customer/app/src/main/res/layout-xlarge/customer_support.xml
+++ b/Example/customer/app/src/main/res/layout-xlarge/customer_support.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.CustomerMainActivity">
     <LinearLayout
         android:id="@+id/linearLayout_agent"
         android:layout_width="fill_parent"
